# outsmart

./: CLAUDE.md  README.md  app.py  pyproject.toml
game/: arenas.py
interfaces/: llms.py
util/: setup.py
views/: displays.py  headers.py  setup.py  sidebars.py
